--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,107 +1,63 @@
 :root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
-    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
-    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
+	--black: #000;
+	--white: #FFF;
 
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+	--blue-bright: #1DE1F0;
+	--blue-muted: #8DBDC1;
 
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
+	--red-bright: #E22106;
+	--red-muted: #D97E72;
 
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
+	--orange-bright: #FF8800;
+	--orange-muted: #CE9862;
 
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
+	--pink-bright: #F00592;
+	--pink-muted: #E881BE;
+
+	--green-bright: #11F886;
+	--green-muted: #60B189;
+
+	--home-color-primary: var(--blue-bright);
+	--home-color-accent: var(--pink-bright);
+	--home-color-secondary: var(--blue-muted);
+	--home-color-tertiary: var(--white);
+
+	--toolkit-color-primary: var(--pink-bright);
+	--toolkit-color-accent: var(--blue-bright);
+	--toolkit-color-secondary: var(--pink-muted);
+	--toolkit-color-tertiary: var(--white);
+
+	--experience-color-primary: var(--green-bright);
+	--experience-color-accent: var(--orange-bright);
+	--experience-color-secondary: var(--green-muted);
+	--experience-color-tertiary: var(--white);
+
+	--sideprojects-color-primary: var(--orange-bright);
+	--sideprojects-color-accent: var(--green-bright);
+	--sideprojects-color-secondary: var(--orange-muted);
+	--sideprojects-color-tertiary: var(--white);
+ 
+	--contact-color-primary: var(--red-bright);
+	--contact-color-accent: var(--orange-bright);
+	--contact-color-secondary: var(--red-muted);
+	--contact-color-tertiary: var(--white);
+ 
+	--cv-color-primary: var(--blue-bright);
+	--cv-color-accent: var(--orange-bright);
+	--cv-color-secondary: var(--green-bright);
+	--cv-color-tertiary: var(--orange-bright);
+
+	--font-family: futura-pt, sans-serif;
+ 
+	--page-color-primary: var(--home-color-primary);
+	--page-color-accent: var(--home-color-accent);
+	--page-color-secondary: var(--home-color-secondary);
+	--page-color-tertiary: var(--home-color-tertiary);
+
+	font-size: 22px;
+	--gutter-size: 0.72rem;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
-
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
-  }
-}
-
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-}
-
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
-}
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+*, *::before, *::after {
+	box-sizing: border-box;
 }
